--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "expressjs",
+  "name": "simple-weather-api",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "author": "Matt Spear",
+  "author": "Lucas Castro",
   "scripts": {
-    "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "bun src/index.ts"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "axios": "latest",
+    "cors": "latest",
+    "dotenv": "latest",
+    "express": "latest"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/node": "^18.16.3",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "@biomejs/biome": "latest",
+    "@types/cors": "latest",
+    "@types/express": "latest",
+    "bun-types": "latest"
   }
 }
